Create reset-password routes and models. Some code refactoring. Update README and yaml files.
